Fix test setup, visibility, and linter issues in server, entities, and index
- PendingIndexUpdate: remove final modifier so the class can be mocked in
  submodule and server tests.
- PluginGuiceEnvironmentTest: instantiate real CopyConfigModule
  instead of mocking it, preventing Guice 'Overriding @Provides
  methods is not allowed' errors, and return Module from helper.
- LabelTypes: use pattern matching instanceof.
- LabelTypesTest: use ImmutableList.of() instead of Collections.emptyList().
- RevisionNoteMap: use buildOrThrow() instead of deprecated build().
- AndPredicateTest, OrPredicateTest: use assertEquals for hashCode comparisons.
- ReviewerStateInternal: convert statement switches to switch expressions.
- SubmitRequirementConfigValidator: use ImmutableMap.of() instead of Map.of().
- ListBranches: use ImmutableList.sortedCopyOf.
- RegexPathPredicateTest: align test method names to lowerCamelCase.

Release-Notes: skip
Change-Id: Iac211ae631472990c9d20f5905fe5ce42d8fe968